# graceful

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  global.c  global.h  keymap.h  macros.h  main.c  types.h
src/common/: log.h  utils.c  utils.h
src/config/: config.c  config.h
src/ext-protocol/: wlr_ext_workspace_v1.c  wlr_ext_workspace_v1.h
src/protocols/: protocol.cmake
src/wm/: wayland.c  wayland.h  wm.c  wm.h
